--- a/TacticsTutorial/Config/DefaultEngine.ini
+++ b/TacticsTutorial/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/L_Entry.L_Entry
 EditorStartupMap=/Game/Levels/L_Entry.L_Entry
+GlobalDefaultGameMode=/Game/Blueprints/Core/TurnBased/Player/BP_GM.BP_GM_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
