--- a/TacticsTutorial/Config/DefaultInput.ini
+++ b/TacticsTutorial/Config/DefaultInput.ini
@@ -67,7 +67,9 @@ bCaptureMouseOnLaunch=True
 bEnableLegacyInputScales=True
 bEnableMotionControls=True
 bFilterInputByPlatformUser=False
+bEnableInputDeviceSubsystem=True
 bShouldFlushPressedKeysOnViewportFocusLost=True
+bEnableDynamicComponentInputBinding=True
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 bEnableGestureRecognizer=False
@@ -76,6 +78,17 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="inputAction_RotateRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="inputAction_RotateLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
++AxisMappings=(AxisName="inputAxis_Zoom",Scale=-65.000000,Key=MouseWheelAxis)
++AxisMappings=(AxisName="inputAxis_Forward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="inputAxis_Forward",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="inputAxis_Forward",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="inputAxis_Forward",Scale=-1.000000,Key=Down)
++AxisMappings=(AxisName="inputAxis_Left",Scale=1.000000,Key=A)
++AxisMappings=(AxisName="inputAxis_Left",Scale=-1.000000,Key=D)
++AxisMappings=(AxisName="inputAxis_Left",Scale=1.000000,Key=Left)
++AxisMappings=(AxisName="inputAxis_Left",Scale=-1.000000,Key=Right)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
